--- a/sync-catalog-to-algolia/package.json
+++ b/sync-catalog-to-algolia/package.json
@@ -4,13 +4,12 @@
     "dev": "micro-dev",
     "start": "micro"
   },
-  "devDependencies": {
-    "micro-dev": "^3.0.0"
-  },
   "dependencies": {
-    "@moltin/request": "^1.4.3",
-    "cuid": "^2.1.6",
+    "algoliasearch": "^3.32.0",
     "micro": "^9.3.3",
     "micro-cors": "^0.1.1"
+  },
+  "devDependencies": {
+    "micro-dev": "^3.0.0"
   }
 }
