--- a/sync-orders-with-shipstation/.eslintrc
+++ b/sync-orders-with-shipstation/.eslintrc
@@ -1,4 +1,6 @@
 {
-    "extends": "@moltin"
+    "extends": "plugin:@typescript-eslint/recommended",
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint"]
 }
   
