--- a/sync-orders-with-shipstation/tsconfig.json
+++ b/sync-orders-with-shipstation/tsconfig.json
@@ -8,5 +8,13 @@
       "moduleResolution": "node",
       "lib": ["es2015"],
       "rootDir": "./"
-    }
+    },
+    "files": [
+      "handler.ts",
+      "models.ts",
+      "utils/transforms.ts",
+      "utils/moltin.ts",
+      "utils/shipstation.ts",
+      "types.d.ts"
+    ]
   }
